<resources>

    <string name="app_name">Minha Grana</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_item_home">Minha carteira</string>
    <string name="drawer_item_settings">Configurações</string>
    <string name="drawer_item_report">Relatórios</string>

    <string name="menu_float_add">Gastei!</string>
    <string name="menu_float_remove">Adicionar crédito</string>

    <string name="dialog_input_text_add_title">Adicionar</string>
    <string name="dialog_input_text_add"></string>
    <string name="novo_gasto_hint">Novo gasto</string>
    <string name="dialog_input_text_add_prefill"></string>
    <string name="quantia_hint">Quantia</string>
    <string name="title_activity_novo_gasto">Novo Gasto</string>

    <string name="novo_gasto">Novo gasto</string>
    <string name="editar_gasto">Editar gasto</string>
    <string name="editar_credito">Editar crédito</string>
    <string name="add_credito">Adicionar crédito</string>
    <string name="categoria">Categoria</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="selecione">Selecione</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei!</string>
    <string name="salvar">Salvar</string>

    <string name="informe_o_ano">Informe o ano</string>
    <string name="ex_with_point">Ex.:</string>

    <string name="title_meses_dialog">Selecione o mês</string>
    <string name="choose">Selecionar</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Transporte</item>
        <item>Combustível</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <!-- Meses -->
    <string name="mes_janeiro">Janeiro</string>
    <string name="mes_fevereiro">Fevereiro</string>
    <string name="mes_marco">Março</string>
    <string name="mes_abril">Abril</string>
    <string name="mes_maio">Maio</string>
    <string name="mes_junho">Junho</string>
    <string name="mes_julho">Julho</string>
    <string name="mes_agosto">Agosto</string>
    <string name="mes_setembro">Setembro</string>
    <string name="mes_outubro">Outubro</string>
    <string name="mes_novembro">Novembro</string>
    <string name="mes_dezembro">Dezembro</string>
    <string name="title_activity_config">Configurações</string>
    <string name="title_activity_google_drive">GoogleDrive</string>
    <string name="title_activity_relatorio">RelatorioActivity</string>

</resources>
