<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mov_fin_act_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/novo_gasto"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow>
                <TextView android:text="@string/valor" />

                <TextView
                    android:text="@string/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <Button
                    android:id="@+id/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selecionarData"
                    android:text="@string/selecione"
                    android:layout_gravity="center"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"/>

        <EditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <Button
            android:id="@+id/inserirGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gastei"
            android:onClick="inserirMovimentacaoFinanceira"/>

    </LinearLayout>

</ScrollView>